
    Notification config options will now be found in "chat_and_hud_notifications.conf"

    MOTD (Message of the day) config options will now be found in "motd.conf"
    MOTD's "MOTD_Enabled" renamed -> "Show-MOTD-On-Player-Join"

    Anonymous statistic config options will now be found in "analytics_reporting.conf"

    Hardcore config options will now be found in "hardcore.conf"

    Exploit related config options will now be found in "exploit-prevention"
    Exploit Prevention's "EndermanEndermiteFarms" renamed -> "Endermen-Endermite-Fix"
    Added toggle for pistons marking natural blocks as unnatural after being moved to prevent afk stone farms
    Added toggle for marking spawned mobs for giving modified XP
    Added toggle for tamed mobs to give combat XP when struck
    Added toggle for acrobatics exploit prevention
    Added customizable limit for the number of locations acrobatics tracks for exploit prevention
    Added toggle for fishing exploit prevention

    Settings related to Player Leveling are now found in "player_leveling.conf"
    Player Leveling's "TruncateSkills" renamed -> "Reduce-Player-Skills-Above-Cap"
    Player Leveling's "StartingLevel" renamed -> "Player-Starting-Level"
    Retro mode setting's "Enable" renamed -> "Use-Retro-Mode"
    Added new toggles for enabling level caps (previously this was done by setting the value above 0)

    World Blacklist settings can now be found in "world_blacklist.conf"
    World Blacklist now includes examples

    Scoreboard settings can now be found in "scoreboard.conf"
    Scoreboard's "Allow_Keep" setting was removed because it was doing something permissions should be doing instead, and I don't see why such a thing even needs a permission!
    Scoreboard's "Power_Level_Tags" renamed -> "Display-Power-Levels-Below-Player-Names"
    Scoreboard's "Show_Stats_After_Login" renamed -> "Show-Stats-Scoreboard-On-Player-Login"
    Scoreboard's "Rainbow" renamed -> "Use-Rainbow-Styling-For-Skill-Names"